# StarPin

./: .env.example  README.md  docker-compose.yml  pyproject.toml
src/: __main__.py
src/bot/: bot.py
src/data/: init.sql
src/exts/: config.py  ping.py  starboard.py
